--- a/pages/Studio.html
+++ b/pages/Studio.html
@@ -111,7 +111,7 @@
 <body>
 
     <header class="header">
-        <a href="../Home.html" class="nav-link-btn"><i class="fas fa-arrow-left"></i></a>
+        <a href="../Index.html" class="nav-link-btn"><i class="fas fa-arrow-left"></i></a>
         <h1>Studio</h1>
         <div style="width:42px"></div>
     </header>
