--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -169,7 +169,7 @@
                 
                 <ul class="space-y-3">
                     <li>
-                        <a href="../Index.html" class="menu-item-link">
+                        <a href="../Home.html" class="menu-item-link">
                             <i data-lucide="home" class="w-5 h-5 mr-4" style="color: var(--primary-color);"></i>
                             <span class="flex-grow font-medium">Home</span>
                             <i data-lucide="chevron-right" class="w-4 h-4 text-[var(--text-muted)]"></i>
