--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Personalizado</title>
+    <title>Menu</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     
@@ -155,7 +155,7 @@
                 
                 <ul class="space-y-4">
                     <li>
-                        <a href="../Home.html" class="menu-item-link">
+                        <a href="../Index.html" class="menu-item-link">
                             <i data-lucide="home" class="w-6 h-6 mr-4" style="color: var(--primary-color);"></i>
                             <span class="flex-grow font-semibold text-lg">Home</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-muted)]"></i>
