--- a/Index.html
+++ b/Index.html
@@ -72,6 +72,11 @@
                 <img id="modal-image" src="" alt="" class="modal-main-image">
                 <div id="modal-text"></div>
                 
+                <section class="reddit-section">
+                    <h2 class="related-sites-title"><i class="fab fa-reddit-alien"></i> Discussões no Reddit</h2>
+                    <div id="reddit-container" class="horizontal-suggestions"></div>
+                </section>
+
                 <section class="suggestions-section">
                     <h2 class="related-sites-title"><i class="fas fa-lightbulb"></i> Sugestões Semelhantes</h2>
                     <div id="suggestions-container" class="horizontal-suggestions"></div>
@@ -105,11 +110,7 @@
     <div id="voice-modal" class="submodal-overlay" style="display: none;">
         <div class="submodal-content voice-modal-content">
             <div class="voice-wave-container">
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
-                <div class="wave"></div>
+                <div class="wave"></div><div class="wave"></div><div class="wave"></div><div class="wave"></div><div class="wave"></div>
             </div>
             <h3 id="voice-status">Ouvindo...</h3>
             <p id="voice-transcript"></p>
