--- a/pages/More/Assistent/Index.html
+++ b/pages/More/Assistent/Index.html
@@ -186,7 +186,7 @@
 </head>
 <body>
 
-    <a href="outra_pagina.html" class="nav-btn">&#8592;</a>
+    <a href="../../../Index.html" class="nav-btn">&#8592;</a>
     <div class="info-btn" onclick="toggleModal(true)">i</div>
 
     <div class="assistant-wrapper" id="app">
