--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -185,10 +185,10 @@
             
             <nav>
                 <ul class="flex flex-col">
-                    <li><a href="./More/Wiki/Games.html" class="modal-option"><i data-lucide="trophy" class="w-5 h-5 mr-4 text-purple-400"></i><span class="font-medium">Games</span></a></li>
-                    <li><a href="./More/Wiki/Characters.html" class="modal-option"><i data-lucide="users" class="w-5 h-5 mr-4 text-blue-400"></i><span class="font-medium">Characters</span></a></li>
-                    <li><a href="./More/Wiki/Music.html" class="modal-option"><i data-lucide="music" class="w-5 h-5 mr-4 text-green-400"></i><span class="font-medium">Music</span></a></li>
-                    <li><a href="./More/Wiki/Books.html" class="modal-option"><i data-lucide="book-open" class="w-5 h-5 mr-4 text-orange-400"></i><span class="font-medium">Books</span></a></li>
+                    <li><a href="./More/Lores/Games.html" class="modal-option"><i data-lucide="trophy" class="w-5 h-5 mr-4 text-purple-400"></i><span class="font-medium">Games</span></a></li>
+                    <li><a href="./More/Lores/Characters.html" class="modal-option"><i data-lucide="users" class="w-5 h-5 mr-4 text-blue-400"></i><span class="font-medium">Characters</span></a></li>
+                    <li><a href="./More/Lores/Music.html" class="modal-option"><i data-lucide="music" class="w-5 h-5 mr-4 text-green-400"></i><span class="font-medium">Music</span></a></li>
+                    <li><a href="./More/Lores/Books.html" class="modal-option"><i data-lucide="book-open" class="w-5 h-5 mr-4 text-orange-400"></i><span class="font-medium">Books</span></a></li>
                 </ul>
             </nav>
         </div>
