--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -165,7 +165,7 @@
                     <li>
                         <div id="wiki-button" class="menu-item-link">
                             <i data-lucide="library" class="w-6 h-6 mr-4 text-indigo-400"></i>
-                            <span class="flex-grow font-semibold text-lg">Wiki</span>
+                            <span class="flex-grow font-semibold text-lg">Lores</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-muted)]"></i>
                         </div>
                     </li>
