--- a/pages/More/Assistent/Index.html
+++ b/pages/More/Assistent/Index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Assistente Orion</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3281893178430236"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-3281893178430236">
     
     <style>
         :root {
