--- a/pages/More/Lores/Characters.html
+++ b/pages/More/Lores/Characters.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Characters - Ultimate Glass Interface</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3281893178430236"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-3281893178430236">
     
     <style>
         :root {
