--- a/pages/More/Lores/Music.html
+++ b/pages/More/Lores/Music.html
@@ -6,9 +6,7 @@
     <title>Music</title>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3281893178430236"
-     crossorigin="anonymous"></script>
-
+    <meta name="google-adsense-account" content="ca-pub-3281893178430236">
     
     <style>
         :root {
