--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -6,8 +6,8 @@
     <title>Menu</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3281893178430236"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-3281893178430236">
+
     
     <style>
         :root {
