--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -157,7 +157,7 @@
                 
                 <ul class="space-y-4">
                     <li>
-                        <a href="../Index.html" class="menu-item-link">
+                        <a href="../index.html" class="menu-item-link">
                             <i data-lucide="home" class="w-6 h-6 mr-4" style="color: var(--primary-color);"></i>
                             <span class="flex-grow font-semibold text-lg">Home</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-muted)]"></i>
