--- a/pages/More/Assistent/Index.html
+++ b/pages/More/Assistent/Index.html
@@ -223,7 +223,7 @@
 </head>
 <body>
 
-    <a href="../../../Index.html" class="nav-btn" aria-label="Voltar">&#8592;</a>
+    <a href="../../../index.html" class="nav-btn" aria-label="Voltar">&#8592;</a>
     <div class="info-btn" onclick="toggleModal(true)">i</div>
 
     <div class="assistant-wrapper" id="app">
