--- a/pages/More/Assistent/Index.html
+++ b/pages/More/Assistent/Index.html
@@ -6,6 +6,16 @@
     <title>Assistente Orion</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
     <meta name="google-adsense-account" content="ca-pub-3281893178430236">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PV154KH2JQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PV154KH2JQ');
+</script>
     
     <style>
         :root {
