--- a/pages/More/Lores/Entretenimento.html
+++ b/pages/More/Lores/Entretenimento.html
@@ -205,7 +205,7 @@
         <div class="user-greeting"><h1>Entrete<span>nimento</span></h1></div>
         
         <div class="search-row">
-            <a href="outra-pagina.html" class="btn-back-nav glass"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="../../More_options.html" class="btn-back-nav glass"><i class="fa-solid fa-arrow-left"></i></a>
             
             <div class="search-container">
                 <i class="fa-solid fa-wand-magic-sparkles main-icon"></i>
