--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -8,7 +8,6 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <meta name="google-adsense-account" content="ca-pub-3281893178430236">
 
-<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PV154KH2JQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -59,7 +58,7 @@
 
         main {
             width: 100%;
-            max-width: 700px; /* Limite de largura para manter elegância no desktop */
+            max-width: 700px; 
             padding: 2rem;
         }
 
@@ -200,6 +199,7 @@
                     <li><a href="./More/Lores/Characters.html" class="modal-option"><i data-lucide="users" class="w-5 h-5 mr-4 text-blue-400"></i><span class="font-medium">Characters</span></a></li>
                     <li><a href="./More/Lores/Music.html" class="modal-option"><i data-lucide="music" class="w-5 h-5 mr-4 text-green-400"></i><span class="font-medium">Music</span></a></li>
                     <li><a href="./More/Lores/Books.html" class="modal-option"><i data-lucide="book-open" class="w-5 h-5 mr-4 text-orange-400"></i><span class="font-medium">Books</span></a></li>
+                    <li><a href="./More/Lores/Entertainment.html" class="modal-option"><i data-lucide="tv" class="w-5 h-5 mr-4 text-red-400"></i><span class="font-medium">Entertainment</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -207,36 +207,31 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // Inicializa os ícones do Lucide
             lucide.createIcons();
 
             const wikiBtn = document.getElementById('wiki-button');
             const wikiModal = document.getElementById('wiki-modal');
             const closeWiki = document.getElementById('close-wiki-modal-button');
 
-            // Função para abrir modal
             const openModal = () => {
                 wikiModal.classList.remove('hidden');
-                document.body.style.overflow = 'hidden'; // Impede scroll do fundo
+                document.body.style.overflow = 'hidden';
             };
 
-            // Função para fechar modal
             const closeModal = () => {
                 wikiModal.classList.add('hidden');
-                document.body.style.overflow = ''; // Restaura scroll
+                document.body.style.overflow = '';
             };
 
             if(wikiBtn && wikiModal && closeWiki) {
                 wikiBtn.onclick = openModal;
                 closeWiki.onclick = closeModal;
                 
-                // Fecha ao clicar fora do conteúdo (no overlay)
                 wikiModal.onclick = (e) => { 
                     if (e.target === wikiModal) closeModal(); 
                 };
             }
 
-            // Atalho tecla ESC para fechar
             document.addEventListener('keydown', (e) => {
                 if (e.key === 'Escape') closeModal();
             });
