--- a/pages/More/partners/partners.html
+++ b/pages/More/partners/partners.html
@@ -147,7 +147,7 @@
     <div class="background-gradient"></div>
 
     <nav class="top-nav">
-        <a href="/" class="btn-redirect"><i class="ph ph-arrow-left"></i></a>
+        <a href="../../../index.html" class="btn-redirect"><i class="ph ph-arrow-left"></i></a>
     </nav>
 
     <main class="main-content">
