--- a/pages/More/partners/partners.html
+++ b/pages/More/partners/partners.html
@@ -196,7 +196,7 @@
             grid.innerHTML += `
                 <div class="partner-card" onclick="openBio('${id}')">
                     <div class="card-avatar" style="background-image: url('${p.avatar}')"></div>
-                    <div class="info"><h3>${p.name}</h3><p>Parceiro Oficial</p></div>
+                    <div class="info"><h3>${p.name}</h3><p>Parceiro(a) Oficial</p></div>
                 </div>`;
         });
 
