--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
   gtag('config', 'G-PV154KH2JQ');
 </script>
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3281893178430236"
+     crossorigin="anonymous"></script>
     
 </head>
 <body>
