--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <nav class="sidebar-nav">
             <ul>
                <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
+               <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Termos de uso</a></li>
+               <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Política de privacidade</a></li>
+       
             </ul>
         </nav>
         <div class="sidebar-footer">
