--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <nav class="sidebar-nav">
             <ul>
                <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
-               <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Termos de uso</a></li>
-               <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Política de privacidade</a></li>
+               <li><a href="pages/terms/terms_of_use.html"><i class="fas fa-info-circle"></i> Termos de uso</a></li>
+               <li><a href="pages/terms/Privacy_Policy.html"><i class="fas fa-info-circle"></i> Política de privacidade</a></li>
        
             </ul>
         </nav>
