--- a/pages/Terms/terms_of_use.html
+++ b/pages/Terms/terms_of_use.html
@@ -193,7 +193,7 @@
     <button class="btn-ghost">Concordar com os Termos Globais</button>
 
     <footer>
-        LoreSpace Framework &copy; Arquitetado por <strong>Orion</strong> <br>
+        LoreSpace Framework &copy; Arquitetado por <strong>Lorespace.com.br</strong> <br>
         Digital Governance, Cloud Integration & Partner Security Standard
     </footer>
 </div>
